player's pieces now have a consecutive, unique index
