# backend/server/mapper/constants.py
@@ -26,3 +26,4 @@ PREVIOUS_SHIFT_LOCATION = "previousShiftLocation"
 ENABLED_SHIFT_LOCATIONS = "enabledShiftLocations"
 SCORE = "score"
 MAZE_SIZE = "mazeSize"
+PIECE_INDEX = "pieceIndex"
